--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/nanoid": "^3.0.0",
     "@types/node": "^20.2.3",
+    "@types/pg": "^8.10.2",
+    "@types/uuid": "^9.0.2",
     "@types/ws": "^8.5.4",
     "typescript": "^5.0.4"
   },
@@ -19,8 +22,10 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.2.1",
+    "nanoid": "^4.0.2",
     "nodemon": "^2.0.22",
     "pg": "^8.11.1",
+    "uuid": "^9.0.0",
     "ws": "^8.13.0"
   },
   "optionalDependencies": {
